--- a/plotGraph.ipynb
+++ b/plotGraph.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as animation\n",
-    "from matplotlib import style"
+    "from matplotlib.animation import FuncAnimation\n",
+    "from matplotlib import style\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -17,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "style.use('fivethirtyeight')\n",
+    "# plt.style.use('fivethirtyeight')\n",
+    "plt.style.use('seaborn')\n",
     "\n",
     "fig = plt.figure()\n",
     "ax1 = fig.add_subplot(1,1,1)"
@@ -29,18 +31,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def animate(i):\n",
-    "    graph_data = open('ex.txt','r').read()\n",
-    "    lines = graph_data.split('\\n')\n",
-    "    xs = []\n",
-    "    ys = []\n",
-    "    for line in lines:\n",
-    "        if len(line) > 1:\n",
-    "            x, y = line.split(',')\n",
-    "            xs.append(float(x))\n",
-    "            ys.append(float(y))\n",
-    "    ax1.clear()\n",
-    "    ax1.plot(xs, ys)"
+    "def animation(i):\n",
+    "    EEGDATAFRAME = pd.read_csv('eegdata.csv')\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    \n",
+    "    x = EEGDATAFRAME[0:i]['Time']\n",
+    "    y = EEGDATAFRAME[0:i]['Attention']\n",
+    "    \n",
+    "    ax.clear()\n",
+    "    ax.plot(x, y)"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ani = animation.FuncAnimation(fig, animate, interval=1000)\n",
+    "animation = FuncAnimation(fig, func=animation, interval=1000)\n",
     "plt.show()"
    ]
   },
