--- a/HandMovementCode/pytel.ipynb
+++ b/HandMovementCode/pytel.ipynb
@@ -284,33 +284,71 @@
     "            signalValue = \"Strong\";\n",
     "        \n",
     "\n",
-    "        print(\"Attention Value %s  --> Outpul Signal Level %s\" %(attentionStr, signalValue))\n",
+    "        print(\"Attention Value %s and Meditation Value %s --> Outpul Signal Level %s\" %(attentionStr, meditationStr, signalValue))\n",
     "        attentionInt = int(attentionStr)\n",
     "        meditationInt = int(meditationStr)\n",
     "        \n",
-    "        if (attentionInt > 69):\n",
+    "        if ((attentionInt > 20) and (attentionInt < 45)):\n",
     "            index += 1\n",
     "            if(index==5):\n",
-    "                print(\"Open Fingers\");\n",
+    "                print(\"Move Index Finger\");\n",
     "                ser.write(str.encode('a'));\n",
     "                index = 1;\n",
     "                \n",
     "            else:\n",
-    "#                 ser.write(str.encode('c'));\n",
+    "                ser.write(str.encode('f'));\n",
     "            \n",
-    "        elif (attentionInt < 70):\n",
+    "        if ((attentionInt > 45) and (attentionInt < 70)):\n",
+    "            middle += 1\n",
+    "            if(middle==5):\n",
+    "                print(\"Move Middle Finger\");\n",
+    "                ser.write(str.encode('b'));\n",
+    "                middle = 1;\n",
+    "            else:\n",
+    "                ser.write(str.encode('f'));\n",
+    "            \n",
+    "        if ((attentionInt > 70) and (attentionInt < 95)):\n",
     "            ring += 1\n",
     "            if(ring==5):\n",
     "                print(\"Move Ring Finger\");\n",
-    "                ser.write(str.encode('b'));\n",
+    "                ser.write(str.encode('c'));\n",
     "                ring = 1;\n",
     "                \n",
     "            else:\n",
-    "#                 ser.write(str.encode('c'));\n",
+    "                ser.write(str.encode('f'));\n",
     "                \n",
+    "\n",
+    "        if ((meditationInt > 20) and (meditationInt < 45)):\n",
+    "            pinky += 1\n",
+    "            if(pinky==5):\n",
+    "                print(\"Move Pinky Finger\");\n",
+    "                ser.write(str.encode('d'));\n",
+    "                pinky = 1;\n",
+    "                \n",
+    "            else:\n",
+    "                ser.write(str.encode('f'));\n",
+    "            \n",
+    "        if ((meditationInt > 45) and (meditationInt < 70)):\n",
+    "            thumb += 1\n",
+    "            if(thumb==5):\n",
+    "                print(\"Move Thumb Finger\");\n",
+    "                ser.write(str.encode('e'));\n",
+    "                thumb = 1;\n",
+    "                \n",
+    "            else:\n",
+    "                ser.write(str.encode('f'));\n",
+    "                \n",
+    "        \n",
+    "        if ((meditationInt > 70) and (meditationInt < 95)):\n",
+    "            close += 1\n",
+    "            if(close==5):\n",
+    "                print(\"Closing all fingers\");\n",
+    "                ser.write(str.encode('f'));\n",
+    "                close = 1; \n",
+    "            \n",
     "        else:\n",
     "            print(\"Closing all fingers\");\n",
-    "            ser.write(str.encode('c'));\n",
+    "            ser.write(str.encode('f'));\n",
     "            time.sleep(1)\n",
     "            \n",
     "ser.close();\n",
